--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+# Composer
 composer.phar
-/vendor/
+/bin
+/vendor
 
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+# Docker
+/var
+
+# Eclipse IDE
+.buildpath
+.project
+.settings
