--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,21 @@
-# Site settings
-title: walthamstow.me
-keywords: walthamstow,e17,community,london,john field
-description: A springboard site for Walthamstow, Lomndon
+# Site metadata
+title: SITE_TITLE
+keywords: SITE_KEYWORDS
+description: SITE_DESCRIPTION
 
-# Custom metadata
-# https://help.github.com/articles/repository-metadata-on-github-pages/
-googledoc_id: 1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU
-ga_code: UA-94019156-1
+# Custom metadata - see https://help.github.com/articles/repository-metadata-on-github-pages/
+# The ID of the Google Doc to be embedded.  
+googledoc_id: GOOGLEDOC_ID
+# Google Analytics code.
+ga_code: GA_CODE
 
-# Build settings
+
+# Jekyll / GitHub Pages settings
 markdown: kramdown
 #exclude: ["README.md"]
 sass:
   style: compressed
-  
+
+# Don't use a GitHub Page theme by default.
 #theme: jekyll-theme-minimal
+
