--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-# Site metadata
-title: SITE_TITLE
-keywords: SITE_KEYWORDS
-description: SITE_DESCRIPTION
+# Site settings
+title: walthamstow.me
+keywords: walthamstow,e17,community,london,john field
+description: A springboard site for Walthamstow, London
 
 # Custom metadata - see https://help.github.com/articles/repository-metadata-on-github-pages/
-# The ID of the Google Doc to be embedded.  
-googledoc_id: GOOGLEDOC_ID
+# The ID of the Google Doc to be embedded. 
+googledoc_id: 1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU
 # Google Analytics code.
-ga_code: GA_CODE
+ga_code: UA-94019156-1
 
 # Jekyll / GitHub Pages settings
 baseurl: ""
@@ -15,7 +15,6 @@ markdown: kramdown
 #exclude: ["README.md"]
 sass:
   style: compact
-
+  
 # Don't use a GitHub Page theme by default.
 #theme: jekyll-theme-minimal
-
